<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:id="@+id/cvDetalles"
    android:layout_width="@dimen/card_width"
    android:layout_height="@dimen/card_height"
    android:backgroundTint="@color/duskYellow"
    card_view:cardCornerRadius="@dimen/corner_radius_card_view">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvNamePokemon"
            android:layout_marginTop="@dimen/card_text_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/card_name"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textColor="@color/black"/>

        <!-- BASE_EXPERIENCE -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_text_top">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTextExperience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_base_experience"
                android:textSize="@dimen/size_text_description"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/card_text_start"
                android:textAlignment="textEnd"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvExperience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginRight="@dimen/cv_margin"
                android:layout_alignParentEnd="true"
                android:textSize="@dimen/size_text_description"/>
        </RelativeLayout>

        <!-- HEIGHT -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_text_top">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTextHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_height"
                android:textSize="@dimen/size_text_description"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/card_text_start"
                android:textAlignment="textEnd"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/size_text_description"
                android:layout_marginRight="@dimen/cv_margin"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <!-- WEIGHT -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_text_top">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTextWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_weight"
                android:textSize="@dimen/size_text_description"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/card_text_start"
                android:textAlignment="textEnd"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/size_text_description"
                android:layout_marginRight="@dimen/cv_margin"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <!-- TYPES -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="@dimen/card_text_top">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_type"
                android:textSize="@dimen/size_text_description"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/card_text_start"
                android:textAlignment="textEnd"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivType1"
                android:layout_width="@dimen/size_type"
                android:layout_height="@dimen/size_type"
                android:layout_marginLeft="60dp"
                android:layout_toRightOf="@+id/tvType"
                android:scaleType="fitXY"/>
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivType2"
                android:layout_width="@dimen/size_type"
                android:layout_height="@dimen/size_type"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/ivType1"
                android:scaleType="fitXY"/>
        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>
